# loban_agent

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  DESIGN.md  Dockerfile  README.md  agent lỗ ban.docx  docker-compose.yml  plan.md  pyproject.toml
assests/: TTLN.txt
data/: category_rules.json  loban_data.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Badge.jsx  Badge.module.css  Button.jsx  Button.module.css  Card.jsx  Card.module.css  ChatPanel.jsx  ChatPanel.module.css  CungBadge.jsx  DimensionTable.jsx  DimensionTable.module.css  FloatingChat.jsx  FloatingChat.module.css  Footer.jsx  Footer.module.css  RulerStrip.jsx  RulerStrip.module.css  Select.jsx  Select.module.css  TextInput.jsx  TextInput.module.css  TopNav.jsx  TopNav.module.css
frontend/src/hooks/: useJob.js  useReport.js
frontend/src/pages/: Analyzing.jsx  Analyzing.module.css  History.jsx  History.module.css  NewAnalysis.jsx  NewAnalysis.module.css  Report.jsx  Report.module.css  Rulers.jsx  Rulers.module.css
frontend/tests/: DimensionTable.test.jsx  History.test.jsx  NewAnalysis.test.jsx
src/loban/: chat.py  checklist.py  classify.py  cli.py  config.py  extract.py  genai_retry.py  ingest.py  models.py  pipeline.py  ruler.py  suggest.py  validate.py
tests/: test_chat.py  test_checklist.py  test_classify.py  test_cli.py  test_db.py  test_extract.py  test_pipeline.py  test_render.py  test_ruler.py  test_suggest.py  test_web_api.py  test_worker.py
(+13 files in other folders)
