[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "loban"
version = "0.1.0"
description = "Agent Lỗ Ban — bóc tách kích thước bản vẽ, đối chiếu thước Lỗ Ban"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymupdf>=1.24",
    "fpdf2>=2.7",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
loban = "loban.cli:main"
loban-web = "loban.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
loban = ["render/fonts/*.ttf"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
